AE: Updated TR translations by Umut Turunc
** with some additions by me.

Change-Id: I1ae1d3453951b9886afe0a04089b676ce6dcb050

--- a/res/values-tr/strings.xml
+++ b/res/values-tr/strings.xml
@@ -8,7 +8,7 @@
     <string name="third_layout_title">Üçüncü Katman</string>
     <string name="aicp_extras_title">AICP Extras</string>
     <string name="pun_title">Herşeye hükmettiren tek rom</string>
-    <string name="various_shit_title">Çeşitli düzenlemeler</string>
+    <string name="various_shit_title">Çeşitli Düzenlemeler</string>
     <string name="about_title">Hakkında</string>
     <string name="other_title">Diğer</string>
     <string name="g_community">G+ toğluluğu</string>
@@ -17,11 +17,11 @@
     <string name="addons_title">Eklentiler</string>
     <string name="welcome_title">Gerçek dünyaya hoş geldin!!!</string>
     <string name="logo">logo</string>
-    <string name="display_animations_title">Ekran ve animasyonlar</string>
+    <string name="display_animations_title">Ekran ve Animasyonlar</string>
     <string name="multishit_title">Çoklu Düzeltmeler</string>
     <string name="transparency_porn_title">Saydamlık Ayarlayıcısı</string>
-    <string name="notificaitons_title">Bildirim çekecesi</string>
-    <string name="statubar_title">Durum çubuğu</string>
+    <string name="notificaitons_title">Bildirim Çekmecesi</string>
+    <string name="statubar_title">Durum Çubuğu</string>
     <string name="lockscreen_title">Kilit Ekranı</string>
     <string name="systemui_tuner_title">SystemUI ayarlayıcısı</string>
     <string name="systemui_tuner_summary">Marshmallow\'a özel SystemUI ayarlayıcısı</string>
@@ -47,7 +47,7 @@
     <string name="storage_permission_not_granted">İzin verilmedi, depolama alanına erişemezsiniz</string>
 
     <!-- Recents panel -->
-    <string name="recents_panel_title">Son uygulamalar paneli</string>
+    <string name="recents_panel_title">Son Uygulamalar Paneli</string>
     <string name="show_clear_all_recents_button_title">Hepsini temizle butonu</string>
     <string name="show_clear_all_recents_button_summary">Hepsini temizle butonunu etkinleştir</string>
     <string name="recents_clear_all_location_title">Buton konumu</string>
@@ -108,7 +108,7 @@
     <string name="color_default">Varsayılan</string>
 
     <!-- Network traffic -->
-    <string name="traffic_category">Trafik göstergeleri</string>
+    <string name="traffic_category">Ağ trafiği göstergeleri</string>
     <string name="traffic_title">Trafik</string>
     <string name="network_traffic_title">Ağ trafiği</string>
     <string name="show_network_traffic_state">Durum çubuğu trafik mönitörü</string>
@@ -127,7 +127,7 @@
     <string name="network_traffic_autohide">Otomatik gizle</string>
     <string name="network_traffic_autohide_summary">Herhangi bir etkinlik olmadığında trafik mönitörünü gizle</string>
     <string name="network_traffic_hidearrow">Okları gizle</string>
-    <string name="network_traffic_hidearrow_summary">Trafik göstergelerindeki okları gizle</string>
+    <string name="network_traffic_hidearrow_summary">Ağ trafiği göstergesindeki okları gizler</string>
     <string name="network_traffic_autohide_threshold">Hareketsizlik eşiği</string>
     <string name="ok">Tamam</string>
     <string name="cancel">İptal</string>
@@ -145,7 +145,7 @@
     <string name="status_bar_custom_header_default_summary">Polygraphic HD resimler için etkinleştir. Varsayılan resimler için devre dışı bırak.</string>
 
     <!-- Carrier Label -->
-    <string name="carrier_options">Özel Operatör İsmi</string>
+    <string name="carrier_options">Özel operatör ismi</string>
     <string name="custom_carrier_label_title">Özel operatör ismi</string>
     <string name="custom_carrier_label_explain">Yeni bir isim girin. Varsayılana dönmek için boş bırakın</string>
     <string name="custom_carrier_label_notset">Özel isim şu anda ayarlı değil</string>
@@ -183,9 +183,9 @@
     <string name="show_headset_icon_summary">Kulaklık takıldığında, kulaklık simgesi gösterir</string>
 
     <!-- Gesture Anywhere -->
-    <string name="gesture_anywhere_title">Gesture Anywhere (Heryerde Hareket)</string>
+    <string name="gesture_anywhere_title">Heryerde Hareket</string>
     <string name="gesture_anywhere_enabled_title">Heryerde Hareket</string>
-    <string name="gesture_anywhere_enabled_summary">Gesture Anywhere özelliğini etkinleştir</string>
+    <string name="gesture_anywhere_enabled_summary">Heryerde hareket özelliğini etkinleştir</string>
     <string name="gesture_anywhere_position_title">Konum</string>
     <string name="gesture_anywhere_position_left">Sol kenar</string>
     <string name="gesture_anywhere_position_right">Sağ kenar</string>
@@ -212,7 +212,7 @@
     <!-- Message displayed when the user opens the gestures settings screen -->
     <string name="ga_gestures_loading">Hareketler yükleniyor...</string>
     <!-- Message displayed when the user has no gestures -->
-    <string name="ga_gestures_empty">Kayıtlı Hareket bulunmamaktadır</string>
+    <string name="ga_gestures_empty">Kayıtlı hareket bulunmamaktadır</string>
     <!-- Title of the screen used to view/manage gestures -->
     <string name="ga_gestures_activity">Hareketler</string>
     <!-- Noun, menu item used to edit a gesture -->
@@ -220,7 +220,7 @@
     <!-- Noun, menu item used to remove a gesture -->
     <string name="ga_gestures_delete">Sil</string>
     <!-- Message displayed when a gesture is successfully deleted -->
-    <string name="ga_gestures_delete_success">Geçerli Hareket silindi</string>
+    <string name="ga_gestures_delete_success">Geçerli hareket silindi</string>
     <!-- Title of dialog box -->
     <string name="ga_gestures_rename_title">Hareketi yeniden adlandır</string>
     <!-- Label of gesture name field in Rename gesture dialog box -->
@@ -442,40 +442,40 @@
     <string name="omniswitch_first_time_message">OmniSwitch\'i etkinleştirdiğinize emin olun. Bunu \"Ayarlar\" sekmesi altında yapabilirsiniz</string>
 
     <!-- Double Tap Navbar to Sleep -->
-    <string name="double_tap_sleep_nav_bar_title">Navbar\'da DT2S(çift dokunuşla uykuya geç)</string>
-    <string name="double_tap_sleep_nav_bar_summary">Cihazı uykuya geçirmek için navigasyon çubuğuna(sanal tuşlara) çift dokun.</string>
+    <string name="double_tap_sleep_nav_bar_title">Navigasyon çubuğunda çift dokunuşla uykuya geç</string>
+    <string name="double_tap_sleep_nav_bar_summary">Cihazı uykuya geçirmek için sanal tuşlara çift dokun.</string>
 
     <!-- Double tap to sleep on lockscreen -->
-    <string name="double_tap_sleep_anywhere_title">Kilit ekranında DT2S(çift dokunuşla uykuya geç)</string>
+    <string name="double_tap_sleep_anywhere_title">Kilit ekranında çift dokunuşla uykuya geç</string>
     <string name="double_tap_sleep_anywhere_summary">Cihazı uykuya geçirmek için kilit ekranına çift dokun</string>
 
     <!-- PA Pie control -->
-    <string name="pa_piecontrol_settings_summary">PA Pie 2.0 hedeflerini özelleştir:stil, boyut ve renk özelleştirmeleri</string>
-    <string name="pa_pie_control_title">Pie (Pasta Dilimi) Kontrolleri</string>
-    <string name="pa_pie_control_enable_title">Pie Kontrollerini Etkinleştir</string>
-    <string name="pa_pie_always_right_title">Pie her zaman sağda</string>
-    <string name="pa_pie_always_right_summary">Pie kulanılırken her zaman sağda gösterilir</string>
-    <string name="pa_pie_targets_title">Pie Hedefleri</string>
-    <string name="pa_pie_style_title">Pie Stili</string>
+    <string name="pa_piecontrol_settings_summary">Panaroid Android Pasta Dilimi 2.0 hedeflerini özelleştir:stil, boyut ve renk özelleştirmeleri</string>
+    <string name="pa_pie_control_title">Pasta Dilimi Kontrolleri</string>
+    <string name="pa_pie_control_enable_title">Pasta dilimi kontrollerini etkinleştir</string>
+    <string name="pa_pie_always_right_title">Pasta dilimi her zaman sağda</string>
+    <string name="pa_pie_always_right_summary">Pasta dilimi kulanılırken her zaman sağda gösterilir</string>
+    <string name="pa_pie_targets_title">Pasta dilimi Hedefleri</string>
+    <string name="pa_pie_style_title">Pasta dilimi stili</string>
     <string name="pa_pie_menu_title">Menü botonunu her zaman  göster</string>
-    <string name="pa_pie_menu_summary">Menü tuşu her zaman görünür olsun mu olmasın mı? Gerekli olmadığı zamanlar dahil olmak üzere...</string>
-    <string name="pa_pie_size_title">Pie Boyutu</string>
-    <string name="pa_pie_size_summary">Pie Kontrolü boyutunu belirleyin</string>
+    <string name="pa_pie_menu_summary">Menü tuşu her zaman görünür olsun mu olmasın mı?</string>
+    <string name="pa_pie_size_title">Pasta dilimi boyutu</string>
+    <string name="pa_pie_size_summary">Pasta dilimi kontrolü boyutunu belirleyin</string>
     <string name="pa_pie_size_small">Küçük</string>
     <string name="pa_pie_size_default">@string/pa_pie_mode_default</string>
     <string name="pa_pie_size_large">Büyük</string>
     <string name="pa_pie_size_gigantic">Devasa</string>
     <string name="pa_pie_size_monster">Canavar</string>
     <string name="pa_pie_size_enormous">Muazzam</string>
-    <string name="pa_pie_gravity_title">Pie Gravity</string>
-    <string name="pa_pie_gravity_summary">Pie\'nin nerede konumlandrılacağını seçin</string>
+    <string name="pa_pie_gravity_title">Pasta dilimi konumuy</string>
+    <string name="pa_pie_gravity_summary">Pasta diliminin nerede konumlandrılacağını seçin</string>
     <string name="pa_pie_gravity_bottom">Alt</string>
     <string name="pa_pie_gravity_right">Sağ</string>
     <string name="pa_pie_gravity_left">Sol</string>
     <string name="pa_pie_gap_title">Dilimler arası boşluk</string>
-    <string name="pa_pie_gap_summary">Pie dilimleri arasındaki mesafeyi ayarla</string>
-    <string name="pa_pie_angle_title">Pie Açısı</string>
-    <string name="pa_pie_angle_summary">Eklentilere göre pie\'ın koruyacağı mesafeyi ayarla</string>
+    <string name="pa_pie_gap_summary">Pasta dilimi dilimleri arasındaki mesafeyi ayarla</string>
+    <string name="pa_pie_angle_title">Pasta dilimi açısı</string>
+    <string name="pa_pie_angle_summary">Eklentilere göre Pasta diliminin koruyacağı mesafeyi ayarla</string>
     <string name="pa_pie_angle_none">Hiçbiri (eski)</string>
     <string name="pa_pie_angle_small">Küçük</string>
     <string name="pa_pie_angle_big">Normal (varsayılan)</string>
@@ -485,24 +485,24 @@
     <string name="pa_pie_gap_small">Küçük</string>
     <string name="pa_pie_gap_big">Büyük (varsayılan)</string>
     <string name="pa_pie_gap_huge">Kocaman</string>
-    <string name="pa_pie_mode_title">Pie Stili</string>
+    <string name="pa_pie_mode_title">Pasta dilimi stili</string>
     <string name="pa_pie_mode_summary">Animasyonların nasıl kullanılacağını yönetin</string>
     <string name="pa_pie_mode_bare">Yalın</string>
     <string name="pa_pie_mode_quick">Hızlı</string>
     <string name="pa_pie_mode_default">Varsayılan</string>
     <string name="pa_pie_mode_slow">Yavaş</string>
-    <string name="pa_pie_lastapp_title">Son Uygulama</string>
-    <string name="pa_pie_lastapp_summary">Son uygulama butonunu etkinleştir</string>
-    <string name="pa_pie_killtask_title">Görevi Sonlandır</string>
-    <string name="pa_pie_killtask_summary">Enable kill task button</string>
+    <string name="pa_pie_lastapp_title">Bir önceki uygulama</string>
+    <string name="pa_pie_lastapp_summary">Bir önceki uygulama butonunu etkinleştir</string>
+    <string name="pa_pie_killtask_title">Görevi sonlandır</string>
+    <string name="pa_pie_killtask_summary">Görevi sonlandırma butonunu etkinleştir</string>
     <string name="pa_pie_notifications_title">Bildirimler</string>
     <string name="pa_pie_notifications_summary">Bildirim düğmesini etkinleştir</string>
     <string name="pa_pie_settings_panel_title">Hızlı Ayarlar Paneli</string>
     <string name="pa_pie_settings_panel_summary">Genişletilmiş hızlı ayarlar paneli düğmesini etkinleştir</string>
     <string name="pa_pie_screenshot_title">Ekran görüntüsü</string>
     <string name="pa_pie_screenshot_summary">Ekran görüntüsü butonunu etkinleştir</string>
-    <string name="pa_pie_color_title">Pie renk ayarları</string>
-    <string name="pa_pie_color_style_title">Pie renk tipi</string>
+    <string name="pa_pie_color_title">Pasta dilimi renk ayarları</string>
+    <string name="pa_pie_color_style_title">Pasta dilimi renk tipi</string>
     <string name="pa_pie_background_title">Arkaplan Rengi</string>
     <string name="pa_pie_select_title">Seçim Renig</string>
     <string name="pa_pie_outlines_title">Anahat Rengi</string>
@@ -564,8 +564,8 @@
     <string name="aokp_animation_summary">AOKP özel animasyonu</string>
     <string name="activity_open_title">Aktivite açma animasyonu</string>
     <string name="activity_close_title">Aktivite kapama animasyonu</string>
-    <string name="task_open_title">Task open animation</string>
-    <string name="task_close_title">Task close animation</string>
+    <string name="task_open_title">Görev açma animasyonu</string>
+    <string name="task_close_title">Görev kapanma animasyonu</string>
     <string name="task_move_to_front_title">Öne taşıma animasyonu</string>
     <string name="task_move_to_back_title">Arkaya taşıma animasyonu</string>
     <string name="wallpaper_open_title">Duvar kağıdı açma animasyonu</string>
@@ -627,7 +627,7 @@
 
     <!-- ListView animation -->
     <string name="interface_settings_animation_title">Animasyon Seçenekleri</string>
-    <string name="listview_animation_title">ListView animation</string>
+    <string name="listview_animation_title">ListView animasyonu</string>
     <string name="listview_off">Varsayılan</string>
     <string name="listview_wave_left">Dalga (sol)</string>
     <string name="listview_wave_right">Dalga (sağ)</string>
@@ -682,7 +682,7 @@
 
     <!-- Recent panel -->
     <string name="recent_panel_category">Slim son uygulamalar paneli</string>
-    <string name="use_slim_recents_title">Slim recents</string>
+    <string name="use_slim_recents_title">Slim son uygulamalar paneli</string>
     <string name="show_running_tasks_title">Sadece çalışan uygulamaları göster</string>
     <string name="recents_max_apps_title">İzin verilen maksimum uygulama</string>
     <string name="recent_panel_scale_title">Boyut</string>
@@ -717,6 +717,36 @@
 
     <string name="brightness_icon_title">Parlaklık simgesi</string>
     <string name="brightness_icon_summary">Otomatik parlaklığı ayarlamak için parlaklık kaydırıcısının sağında simge göster</string>
+
+	<!-- App sidebar -->
+    <string name="app_sidebar_title">Uygulama Kenar Çubuğu</string>
+    <string name="app_sidebar_enable_title">Uygulama kenar çubuğunu etkinleştir</string>
+    <string name="app_sidebar_enable_summaryOn">Uygulama kenar çubuğu etkin</string>
+    <string name="app_sidebar_enable_summaryOff">Uygulama kenar çubuğu devre dışı</string>
+    <string name="app_sidebar_setup_items_title">Kenar çubuğunun içeriğini ayarla</string>
+    <string name="app_sidebar_setup_items_summary">Kenar çubuğuna uygulama kısayolu ekle, kaldır ve yerini belirle</string>
+    <string name="app_sidebar_transparency_title">Kenar çubuğu saydamlığı</string>
+    <string name="app_sidebar_transparency_summary">Kenar çubuğu saydamlığını ayarla</string>
+    <string name="app_sidebar_position_title">Kenar çubuğu konumu</string>
+    <string name="app_sidebar_position_summary">Kenar çubuğunu ekranın sağ veya sol tarafına yerleştirin</string>
+    <string name="app_sidebar_position_left">Sol</string>
+    <string name="app_sidebar_position_right">Sağ</string>
+    <string name="app_sidebar_hide_labels_title">Uygulamların isimlerini gizle</string>
+    <string name="app_sidebar_hide_labels_summary">Kenar çubuğu uygulamlarının isimlerini gizle</string>
+    <string name="tab_category">Görünür sekme</string>
+    <string name="use_tab_title">Sekmeyi görüntüle</string>
+    <string name="use_tab_summary">Dokunulduğunda kenar çubuğu sekmesini görüntüler.</string>
+    <string name="tab_position_title">Sekme konumu</string>
+    <string name="tab_position_summary">Sekmeyi ekranın orta, üst veya altında görüntüle.</string>
+    <string name="tab_size_title">Sekme boyutu</string>
+    <string name="tab_size_summary">Görünür sekmenin boyutunu değiştir</string>
+    <string name="trigger_category">Tetik bölgesi</string>
+    <string name="trigger_width_title">Tetik yükseklliği</string>
+    <string name="trigger_width_summary">Tetik alanının genişliğini ayarla</string>
+    <string name="trigger_top_title">Tetik konumu</string>
+    <string name="trigger_top_summary">Tetik alanının dikey konumunu ayarla</string>
+    <string name="trigger_bottom_title">Tetik yüksekliği</string>
+    <string name="trigger_bottom_summary">Tetik alanının yüksekliğini ayarla</string>	
 
     <!-- Wakelock blocker -->
     <string name="wakelock_blocker_title">Uyandırma engelleyici</string>
@@ -797,4 +827,15 @@
     <!-- Current on Lockscreen -->
     <string name="lock_screen_show_current">Anlık şarj hızı</string>
     <string name="lock_screen_show_current_summary">Kilit ekranında anlık şarj hızını gösterir</string>
+	
+	<!-- Floating Windows -->
+    <string name="shortcut_action_floating_windows">Yüzen Pencereler</string>
+    <string name="floating_master_switch">Master Switch</string>
+    <string name="floating_additional_options">İlave Seçenekler</string>
+    <string name="floating_windows">Yüzen Pencereler</string>
+    <string name="floating_windows_switch">Yüzen Pencereler modunu tüm eylemlerde etkinleştirin. Aksi halde aşağıdakiler, Yüzen Pencereler modunda çalışmaz</string>
+    <string name="slim_action_floats">Slim Actions &amp; Pie</string>
+    <string name="slim_action_floats_summary">Slim &amp; Pie eylemlerini Yüzen Pencere Modunda aç</string>
+    <string name="gesture_anywhere_floating">Heryerde Hareket</string>
+    <string name="gesture_anywhere_floating_summary">Heryerde hareket kısayollarını yüzen pencerelerde görüntüle</string>
 </resources>
