Italian translation updates

--- a/res/values-it/strings.xml
+++ b/res/values-it/strings.xml
@@ -280,7 +280,7 @@
     <string name="recents_full_screen_date_summary">Mostra la  data in alto quando a tutto schermo</string>
 
     <!-- Weather settings -->
-    <string name="weather_lockscreen_category">Opzioni meteo per la schermata di blocco</string>
+    <string name="weather_lockscreen_category">Opzioni meteo</string>
     <string name="weather_cat_notifications_title">Notifiche</string>
     <string name="weather_settings_title">Impostazioni orologio schermata di blocco</string>
     <string name="weather_settings_summary">Configura posizione del widget meteo e altri impostazioni</string>
@@ -324,7 +324,7 @@
     <string name="weather_reset_title">Resetta i valori meteo</string>
 
     <!-- Lock Clock Fonts -->
-    <string name="lock_clock_font_title">Font Orologio Shermata di Blocco</string>
+    <string name="lock_clock_font_title">Font Orologio</string>
     <string name="lock_clock_font_summary">Cambia i font di default del widget orologio sulla shermata di blocco</string>
     <string name="lock_clock_font_dialog_title">Seleziona font orologio schermata di blocco</string>
     <string name="lock_clock_font_normal">Roboto</string>
@@ -354,7 +354,7 @@
     <string name="lock_clock_font_notoserif_bold_italic">NotoSerif Grassetto Italico</string>
 
     <!-- Lockscreen see through -->
-    <string name="lockscreen_see_through_title">Sfocatura schermata di blocco</string>
+    <string name="lockscreen_see_through_title">Sfocatura</string>
     <string name="lockscreen_see_through_summary">Sfoca e visualizza il contenuto dietro la schermata di blocco.</string>
     <string name="lockscreen_blur_radius">Intensità effetto sfocatura</string>
 
@@ -363,7 +363,7 @@
     <string name="notif_drawer_weather_summary">Abilita/disabilita informazioni meteo sul cassetto notifiche</string>
 
     <!-- Power menu on lock screen -->
-    <string name="powermenu_lockscreen_title">Menu accensione su schermata di blocco</string>
+    <string name="powermenu_lockscreen_title">Menu accensione</string>
     <string name="powermenu_lockscreen_summary">Mostra menu accensione su schermata di blocco</string>
 
     <!-- ROm Stats -->
@@ -445,7 +445,7 @@
     <string name="double_tap_sleep_nav_bar_summary">Doppio tocco sulla barra di navigazione per porre il dispositivo in sleep</string>
 
     <!-- Double tap to sleep on lockscreen -->
-    <string name="double_tap_sleep_anywhere_title">DT2S su Schermata di blocco</string>
+    <string name="double_tap_sleep_anywhere_title">Doppio tocco</string>
     <string name="double_tap_sleep_anywhere_summary">Doppio tocco sulla schermata di blocco per porre il dispositivo in sleep</string>
 
     <!-- PA Pie control -->
@@ -485,7 +485,7 @@
     <string name="pa_pie_gap_big">Grande (default)</string>
     <string name="pa_pie_gap_huge">Molto grande</string>
     <string name="pa_pie_mode_title">Stile torta</string>
-    <string name="pa_pie_mode_summary">Manage how animations and status additions will be handled</string>
+    <string name="pa_pie_mode_summary">Stabilisci come le animazioni e variazioni di stato devono essere gestite</string>
     <string name="pa_pie_mode_bare">Essenziale</string>
     <string name="pa_pie_mode_quick">Veloce</string>
     <string name="pa_pie_mode_default">Default</string>
@@ -723,7 +723,7 @@
     <string name="app_sidebar_enable_summaryOn">Barra laterale applicazioni abilitata</string>
     <string name="app_sidebar_enable_summaryOff">Barra laterale applicazioni disabilitata</string>
     <string name="app_sidebar_setup_items_title">Imposta contenuti barra laterale</string>
-    <string name="app_sidebar_setup_items_summary">Aggiungi, rimuovi, e posiziona elementi sulla barra laterale</string>
+    <string name="app_sidebar_setup_items_summary">Aggiungi, rimuovi e posiziona elementi sulla barra laterale</string>
     <string name="app_sidebar_transparency_title">Trasparenza barra laterale</string>
     <string name="app_sidebar_transparency_summary">Imposta il livello di trasparenza della barra laterale</string>
     <string name="app_sidebar_position_title">Posizione Barra Laterale</string>
@@ -770,7 +770,7 @@
     <string name="power_menu_dialog_dim">Offuscamento Sfondo Dialogo Accensione/Riavvio</string>
 
     <!-- Lockscreen Torch -->
-    <string name="keyguard_torch_title">Torcia su schermata di blocco</string>
+    <string name="keyguard_torch_title">Torcia</string>
     <string name="keyguard_torch_summary">Premi a lungo il tasto accensione quando lo schermo è spento, per accendere la torcia</string>
 
     <!-- Breathing Notifications -->
@@ -807,7 +807,7 @@
     <string name="lockscreen_alarm_color">Sveglia</string>
     <string name="lockscreen_clock_color">Orologio</string>
     <string name="lockscreen_clock_date_color">Data</string>
-    <string name="lockscreen_colors_reset_title">Resetta colori schermata di blocco</string>
+    <string name="lockscreen_colors_reset_title">Resetta colori</string>
     <string name="lockscreen_colors_reset_message">Sicuro di voler resettare i colori a quelli di default?</string>
     <string name="yes">SI</string>
 
